# -Advent_of_Code-2022

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: day_01.rs  template.rs
utilities/: Cargo.toml
utilities/src/: lib.rs
