[package]
name = "aoc2022"
version = "0.1.0"
authors = ["Anders Lindén <hello_world@anders.dev>"]
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
utilities = { path = "utilities" }

[[bin]]
name = "template"
path = "src/template.rs"

[[bin]]
name = "day_01"
path = "src/day_01.rs"